--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="root-container">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <h1 class="titolo">{{title}}</h1> <h2 class="account"><span class="showAccount" [hidden]="connected"></span></h2><div class="admin">{{tmpAddr}}</div>
+      <h1 class="titolo" (click)="refresh()">{{title}}</h1> <h2 class="account"><span class="showAccount" [hidden]="connected"></span></h2><div class="admin">{{tmpAddr}}</div>
     </mat-toolbar-row>
   </mat-toolbar>
 </div>
