--- a/src/app/donate/donate.component.html
+++ b/src/app/donate/donate.component.html
@@ -6,7 +6,7 @@
       <mat-card-content class="project">
 
         <mat-radio-group labelPosition="after" class="radio-group">
-          <mat-radio-button *ngFor="let project of charity.value; let k = index" (change)="setProject(project[0], i)" [value]="project"
+          <mat-radio-button *ngFor="let project of charity.value; let k = index" (change)="setProject(project[0], i)" (change) ="showTotal(charity.key, project[0], i)" [value]="project"
             style="font-family:'Times New Roman', Times, serif; font-size: medium; margin: 5px;">{{project?.[0]}}</mat-radio-button>
         </mat-radio-group>
 
@@ -15,7 +15,7 @@
 
         <mat-form-field class="inputDigit" appearance="fill">
           <mat-label>Donation Amount</mat-label>
-          <input matInput type="number" step="0.00001" min="0" max={{balance}} placeholder="Donation Amount" value="0.0001" #donation>
+          <input matInput type="number" step="0.00001" min="0" max={{balance}} placeholder="Donation Amount" value={{myAmount}} #donation>
         </mat-form-field>
 
       </mat-card-content>
