--- a/src/app/donate/donate.component.html
+++ b/src/app/donate/donate.component.html
@@ -1,3 +1,12 @@
+<div class="container">
+  <h2 class="title">
+    <span class="title-word title-word-1">Do</span>
+    <span class="title-word title-word-2">na</span>
+    <span class="title-word title-word-3">te</span>
+    <img class="donate-logo" src="https://cdn4.iconfinder.com/data/icons/finance-business-4-1/32/Donate-Money-Charity-Donation-512.png">
+  </h2>
+</div>
+
 <div class="card-container">
   <div *ngFor="let charity of charitiesMap | keyvalue, let i = index" class="cards">
     <mat-card class="charity-card">
@@ -6,8 +15,10 @@
       <mat-card-content class="project">
 
         <mat-radio-group labelPosition="after" class="radio-group">
+          <ul>
           <mat-radio-button *ngFor="let project of charity.value; let k = index" (change)="setProject(project[0], i)" (change) ="showTotal(charity.key, project[0], i)" [value]="project"
-            style="font-family:'Times New Roman', Times, serif; font-size: medium; margin: 5px;">{{project?.[0]}}</mat-radio-button>
+            style="font-family:'Times New Roman', Times, serif; font-size: medium; margin: 5px;"><li><a>{{project?.[0]}}</a></li></mat-radio-button>
+          </ul>
         </mat-radio-group>
 
         <mat-form-field class="inputDigit" appearance="fill">
